# documind

./: .dockerignore  .env.production.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INTERVIEW_SCOPE.md  LICENSE  OPEN_CONCEPTS.md  PRD_DocuMind.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_document_progress.py  0003_add_feedback_table.py  0004_user_email_nullable.py  0005_add_api_keys_table.py  0006_add_eval_tables.py  0007_add_concept_dag.py  0008_add_contributor_wanted.py  0009_global_study_map.py  0010_practice_problems.py  0011_personal_kb_leetcode.py  0012_one_personal_kb_per_org.py  0013_consolidate_personal_documents.py  0014_user_llm_credentials.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/data/: a2sv_github_resources.py  bundled_notes_loader.py  interview_concepts.py  practice_problems_seed.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  api_keys.py  concepts.py  conversations.py  documents.py  evaluation.py  feedback.py  kb.py  llm_credentials.py  org.py  query.py  study_map.py
backend/app/services/: community.py  embeddings.py  llm.py  (+11 more)
backend/tests/: __init__.py  conftest.py  test_auth.py  test_byok.py  test_concepts.py  test_evaluation.py  test_github_sync.py  test_ingestion.py  test_llm.py  test_new_features.py  test_parsers.py  test_practice_problems.py  test_retrieval.py  test_routers.py  test_workspace_consolidation.py
(+88 files in other folders)
