[project]
name = "documind-backend"
version = "0.1.0"
description = "DocuMind RAG backend — FastAPI + LangChain + pgvector"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.2",
    "psycopg2-binary>=2.9.9",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",

    # AI / LangChain
    "langchain>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.2.0",

    # Document parsing
    "pymupdf>=1.24.4",
    "python-docx>=1.1.2",
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",

    # Config & utils
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "boto3>=1.34.0",
    "supabase>=2.4.6",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
